--- a/docker-launcher/docker-compose.yml
+++ b/docker-launcher/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     depends_on:
     - db
     ports:
-    - 5050:80
+    - 5050:80 ## external exposed port: internal docker port
     ## you can change pgAdmin default username/password with below environment variables
     environment:
       PGADMIN_DEFAULT_EMAIL: pgadmin@example.com
